# Tentacle-TV

./: .dockerignore  .easignore  .env.example  .env.production  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRIVACY.md  README.md  RELEASE-NOTES.md  RELEASE.md  context.md  docker-compose.external.yml  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  registry.json
.claude/: settings.json
.github/workflows/: docker.yml  release-store.yml  release.yml
apps/backend/: .env.example  docker-entrypoint.sh  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/scripts/: build-shared-deps.js
apps/backend/src/: index.ts
apps/desktop/: package.json
apps/desktop/scripts/: build-macos.sh  bundle-macos-dylibs.sh  sign-build.mjs
apps/desktop/src/: index.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.microsoftstore.conf.json
apps/desktop/src-tauri/.tauri-keys/: tentacle.key.pub
apps/desktop/src-tauri/capabilities/: default.json  libmpv.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/lib/: .gitignore  libmpv-wrapper.dylib
apps/desktop/src-tauri/src/: main.rs  msix_update.rs  video_surface.rs
apps/desktop/src-tauri/src/macos/: commands.rs  events.rs  gl_surface.rs  mod.rs  mpv_ffi.rs  render.rs  sleep_assertion.rs  util.rs
apps/desktop/src-tauri/src/mpv/: commands.rs  config.rs  events.rs  mod.rs  player.rs  video_surface.rs
apps/mobile/: app.json  babel.config.js  eas.json  index.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/tv/: app.json  babel.config.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/tv/src/: App.tsx
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
deploy/: env.production  nginx-tentacle.conf  post-receive  setup-server.sh  tentacle-backend.service
design-system/: MASTER.md
docs/: RELEASE.md  plugin-registry-README.md  registry-template.json
download/src/: index.js
patches/: react-native-video@6.19.0.patch
relay/: README.md  package-lock.json  package.json  wrangler.toml
relay/src/: index.js
scripts/: build-desktop.ps1  dev.bat
(+534 files in other folders)
