[package]
name = "tentacle-desktop"
version = "1.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-libmpv = "0.3.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
