[package]
name = "tentacle-desktop"
version = "1.1.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-libmpv = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSResponder", "NSApplication", "NSRunningApplication", "NSOpenGL", "NSOpenGLView"] }
libloading = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
